# cresus

./: CMakeLists.txt  Makefile  Makefile.am  README  TODOLIST  configure.ac  test.c
core/: candle.h  trade.h
engine/: CMakeLists.txt  bigdata.h  calendar.c  calendar.h  candle.c  candle.h  cert.h  cluster.c  cluster.h  common_opt.c  common_opt.h  engine.c  engine.h  engine_v2.c  engine_v2.h  order.c  order.h  portfolio.c  portfolio.h  position.c  position.h  timeline.c  timeline.h  tracker_entry.h
framework/: CMakeLists.txt  alloc.h  candle.c  candle.h  common_opt.c  common_opt.h  engine.h  event_handler.c  event_handler.h  indicator.c  indicator.h  indicator_entry.h  input.c  input.h  list.h  module.c  module.h  slist.h  slist_by_uid.h  some_data_structures.h  time_info.c  time_info.h  timeline.c  timeline.h  timeline_entry.c  timeline_entry.h  types.h  verbose.h
indicator/: CMakeLists.txt  atr.c  atr.h  bollinger.c  bollinger.h  esi.h  heikin_ashi.c  heikin_ashi.h  hilo.c  hilo.h  jtrend.c  jtrend.h  linear_reg.c  linear_reg.h  lowest.c  lowest.h  macd.c  macd.h  mobile.c  mobile.h  roc.c  roc.h  rs_dorsey.c  rs_dorsey.h  rs_mansfield.c  rs_mansfield.h  rs_roc.c  rs_roc.h  rsi.c  rsi.h  smi.c  smi.h  srsi.c  srsi.h  stochastic.c  stochastic.h  stoploss.c  stoploss.h  sup_res.c  sup_res.h  (+6 more)
input/: CMakeLists.txt  b4b.c  b4b.h  euronext.c  euronext.h  google.c  google.h  input_wrapper.h  inwrap.c  inwrap.h  json.c  json.h  kraken.c  mdgms.c  mdgms.h  xtrade.c  xtrade.h  yahoo.c  yahoo.h  yahoo_v7.c  yahoo_v7.h
lost+found/sim/: sim.c
math/: CMakeLists.txt  average.c  average.h
parser/: google.h  yahoo.h
program/: Makefile  cresus_ex  cresus_vp.c~  cresus_zz.c~  google.csv
sample/: CMakeLists.txt  basics.c  cresus_zz.c  development.c  development_cluster.c  development_sim.c  development_snowball.c  ema_snowball.c  roc.c  zz_snowball.c
script/: license  superclass  yahoo
sim/: CMakeLists.txt  position.c  position.h  sim.c  sim.h
system/: CMakeLists.txt  buy_monthly.c  buy_once.c  buy_red_filtered.c  buy_red_no_filter.c  buy_red_sell_green_filtered.c  sell_in_may.c
technical/: atr.c  bollinger.h  heikin_ashi.c  heikin_ashi.h  macd.h  mobile.c  rsi.c  smi.c  srsi.h  stochastic.h  stoploss.h  swing.c  swing.h  xtr.h  zigzag.c  zigzag.h
trading/: position.h
util/: array.c  array.h
