# bin_PROGRAMS = cresus
# cresus_SOURCES = main.c
# cresus_SUBDIRS = core event input math parser technical
lib_LTLIBRARIES = libcresus.la
libcresus_la_SOURCES = framework/candle.c framework/engine.c \
		       framework/event_handler.c framework/indicator.c \
                       framework/input.c framework/module.c \
		       math/average.c \
		       parser/google.c parser/yahoo.c \
		       indicator/atr.c indicator/bollinger.c indicator/esi.c \
                       indicator/heikin_ashi.c indicator/indicator.c \
                       indicator/macd.c indicator/mobile.c indicator/rsi.c \
                       indicator/smi.c indicator/srsi.c \
                       indicator/stochastic.c indicator/stoploss.c \
                       indicator/swing.c indicator/vector.c indicator/xtr.c \
                       indicator/zigzag.c \
                       trading/portfolio.c trading/position.c \
                       trading/statistics.c trading/trade.c
